--- a/sip.conf
+++ b/sip.conf
@@ -6,7 +6,7 @@ srvlookup=yes
 defaultexpirey=1800
 dtmfmode=auto
 qualify=yes
-register => id:secret@sip.telnyx.com
+register => myid:mysecret@sip.telnyx.com
 nat=yes
 
 
@@ -15,8 +15,8 @@ nat=yes
  ; Diamondcard.us termination
  [diamondcard]
  type=peer
- username=id
- secret=secret
+ username=myid
+ secret=mysecret
  host=sip.telnyx.com
  disallow=all
  allow=alaw,ulaw
